fix(form): add defaultvalue support to advanced form
Add default value support to advanced form.
Fix overlap of tooltips in slider input.

--- a/components/Form/SliderInput/styles.module.scss
+++ b/components/Form/SliderInput/styles.module.scss
@@ -71,6 +71,10 @@
         &Y {
             right: 0;
         }
+
+        &Active {
+            z-index: 2;
+        }
     }
 
     .marks {
